fixed height issue for card animations on safari

--- a/src/index.css
+++ b/src/index.css
@@ -198,7 +198,7 @@ html, body {
         left: 50%;
         transform: translate(-50%, -50%) rotate(0deg);
         width: 100vw;
-        height: 100vh;
+        height: 100dvh;
         z-index: 70;
     }
     
@@ -242,7 +242,7 @@ html, body {
         left: 50%;
         transform: translate(-50%, -50%) rotate(0deg);
         width: 90vw;
-        height: 90vh;
+        height: 90dvh;
         z-index: 70;
         box-shadow: 0px 8px 15px 8px rgba(0, 0, 0, 0.25);
     } 
@@ -298,7 +298,7 @@ html, body {
         left: 50%;
         transform: translate(-50%, -50%) rotate(0deg);
         width: 100vw;
-        height: 100vh;
+        height: 100dvh;
         z-index: 70;
     }
     50% {
@@ -340,7 +340,7 @@ html, body {
         left: 50%;
         transform: translate(-50%, -50%) rotate(0deg);
         width: 90vw;
-        height: 90vh;
+        height: 90dvh;
         z-index: 70;
         box-shadow: 0px 8px 15px 8px rgba(0, 0, 0, 0.25);
     }
